--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(RoamingID)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(RoamingID main.cpp Xoroshiro128Plus8b.h)
+add_executable(RoamingID main.cpp Xoroshiro128Plus8b.h roaming_finder.cpp roaming_finder.h definitions.h)
