支持多线程

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,10 @@ project(RoamingID)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(RoamingID main.cpp Xoroshiro128Plus8b.h roaming_finder.cpp roaming_finder.h definitions.h)
+add_executable(RoamingID
+        main.cpp
+        roaming_finder.cpp roaming_finder.h
+        Xoroshiro128Plus8b.h
+        definitions.h
+        thread_pool.h scope_guard.h
+        )
