挪一下文件位置

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,15 +3,7 @@ project(RoamingID)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(RoamingID
-        main.cpp
-        rng_pokemon_finder.cpp rng_pokemon_finder.h
-        roaming_finder.cpp roaming_finder.h
-        overworld_finder.cpp overworld_finder.h
-        Xoroshiro128Plus8b.h Xoroshiro128Plus.h
-        definitions.h
-        thread_pool.h scope_guard.h
-        arg_op.cpp arg_op.h
-        )
+FILE(GLOB_RECURSE SOURCE_FILES src/*.cpp src/*.h)
+add_executable(RoamingID ${SOURCE_FILES})
 
 target_link_libraries(RoamingID pthread)
